...
                        }
                    }
                )
                if (failed.value) {
                    Text(
                        "Invalid credentials",
                        modifier = Modifier.align(Alignment.CenterHorizontally).testTag("Login error msg"),
                        color = MaterialTheme.colorScheme.error,
                        fontWeight = FontWeight.Bold,
                        fontSize = TextUnit(0.8f, TextUnitType.Em)
                    )
                }
                Spacer(Modifier.width(MEDIUM))
                Button(
                    onClick = {
                        onLogin()
                    },
                    modifier = Modifier.focusable(true).align(Alignment.CenterHorizontally).testTag("login")
                ) {
                    Text("Login")
                }
            }
        }

...
